compiling_error.txt
F:\github\datastructures\datastructures\slinkedlist.cpp: In function 'void AddNodes()':
F:\github\datastructures\datastructures\slinkedlist.cpp:42:7: error: 'head' was not declared in this scope
       head->link=current->link; // LINKING HEAD TO CURRENT NODE!
       ^
F:\github\datastructures\datastructures\slinkedlist.cpp:42:18: error: 'current' was not declared in this scope
       head->link=current->link; // LINKING HEAD TO CURRENT NODE!
                  ^
F:\github\datastructures\datastructures\slinkedlist.cpp:53:9: error: 'current' was not declared in this scope
         current->link=temp;
         ^
F:\github\datastructures\datastructures\slinkedlist.cpp:54:15: error: 'NODE {aka struct node}' has no member named 'link'
         temp->link=NULL;
               ^
